app/main/default/objects/Flosum__Org_Component__c/fields/Flosum__API_Name__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__API_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>