app/main/default/objects/Flosum__Org_Component__c/fields/Flosum__Attachment_ID__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Attachment_ID__c</fullName>
        <label>Attachment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>