app/main/default/objects/Flosum__Org_Component__c/fields/Flosum__Component_Type__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Component_Type__c</fullName>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ActionLinkGroupTemplate</fullName>
                </value>
                <value>
                    <fullName>AnalyticSnapshot</fullName>
                </value>
                <value>
                    <fullName>ApexClass</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>