app/main/default/objects/Flosum__Org_Component__c/fields/Flosum__CRC32__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__CRC32__c</fullName>
        <label>CRC32</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>