app/main/default/objects/Flosum__Org_Component__c/fields/Flosum__Folder__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Folder__c</fullName>
        <label>Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>