app/main/default/objects/Flosum__Org_Component__c/fields/Flosum__Is_Retrieved__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Is_Retrieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Retrieved</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>