app/main/default/objects/Flosum__Org_Component__c/fields/Flosum__Last_Modified_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Last_Modified_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Changed On</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
</CustomObject>