app/main/default/objects/Flosum__Org_Component__c/fields/Flosum__Last_Updated_By__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Last_Updated_By__c</fullName>
        <label>Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>