app/main/default/objects/Flosum__Org_Component__c/fields/Flosum__Name__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>