app/main/default/objects/Flosum__Org_Component__c/fields/Flosum__Old_Attachment_ID__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Old_Attachment_ID__c</fullName>
        <label>Old Attachment IDs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>