app/main/default/objects/Flosum__Org_Component__c/fields/Flosum__OrganisationName__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__OrganisationName__c</fullName>
        <label>Org</label>
        <referenceTo>Flosum__Organisation__c</referenceTo>
        <relationshipLabel>Latest Components</relationshipLabel>
        <relationshipName>Org_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>